k8s/frontend.yml
apiVersion: v1
kind: Pod
metadata:
  name: html
  labels:
    app: demo
    name: html
spec:
  containers:
    - name: html
      image: localhost:5000/html:latest
      ports:
        - name: http
          containerPort: 80
