k8s/backend.yml
apiVersion: v1
kind: Pod
metadata:
  name: api
  labels:
    app: demo
    name: api
spec:
  containers:
    - name: html
      image: localhost:5000/api:latest
      ports:
        - name: http
          containerPort: 80
      resources:
        limits:
          memory: 256Mi
          cpu: 500m

---
kind: Service
apiVersion: v1
metadata:
  name: api
spec:
  selector:
    app: api
    name: html
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
